src/styles/AppStyle.css
.app {
    width: 100%;
    height: 100%;
}

.logo {
  height: 60px;
  width: auto;
  padding: 5px;
}

.main {
  transition: filter 0.3s ease;
}

.blur-background {
  filter: blur(2px);
}

:root {
  --yellow-2: #ffefb7;
  --gray-2: #cccccc;
}

.navbar {
  width: 100%;
  height: 60px;
  display: grid;
  grid-template-columns: 1fr 50px 50px 50px;
  grid-template-rows: auto;
  border-bottom: 2px solid black;
}

.navbar > div:first-child {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0px;
  padding: 0px;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  min-width: 0px;
  min-height: 0px;
  font-size: xx-large;
}

/* Not sure what this is. Queue for deletion 2/9/24 */
/* .navbar > div:first-child {
  display: flex;
  align-items: right;
  justify-content: left;
  margin: 0px;
  padding: 10px;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  min-width: 0px;
  min-height: 0px;
  font-size: xx-large;
} */

.navbar > div:not(:first-child) {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0px;
  padding: 0px;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  min-width: 0px;
  min-height: 0px;
  font-size: xx-large;
}

.navbar-icon {
  font-size: x-large;
}

